--- a/app/src/main/res/layout/item_receita.xml
+++ b/app/src/main/res/layout/item_receita.xml
@@ -3,36 +3,41 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    android:paddingLeft="4dp"
+    android:paddingTop="8dp"
+    android:paddingRight="4dp"
+    android:paddingBottom="8dp">
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="107dp"
-        android:layout_height="83dp"
+        android:layout_width="121dp"
+        android:layout_height="85dp"
         android:layout_marginEnd="16dp"
         android:background="#A8A4A4"
         android:scaleType="centerCrop" />
 
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:gravity="center"
         android:orientation="vertical">
 
         <TextView
             android:id="@+id/tvRecipeName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="TextView"
+            android:text="Receita"
             android:textAlignment="center"
             android:textSize="20sp"
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/tvRecipeId"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="X avaliações" />
+            android:text="TextView" />
 
     </LinearLayout>
 
