--- a/app/src/main/res/values-v23/themes.xml
+++ b/app/src/main/res/values-v23/themes.xml
@@ -2,6 +2,7 @@
 
     <style name="Theme.AppReceitas" parent="Base.Theme.AppReceitas">
         <!-- Transparent system bars for edge-to-edge. -->
+        <item name="android:toolbarStyle">@android:color/transparent</item>
         <item name="android:navigationBarColor">@android:color/transparent</item>
         <item name="android:statusBarColor">@android:color/transparent</item>
         <item name="android:windowLightStatusBar">?attr/isLightTheme</item>
