--- a/app/src/main/res/layout/fragment_show_recipe.xml
+++ b/app/src/main/res/layout/fragment_show_recipe.xml
@@ -16,6 +16,14 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
+            <ImageView
+                android:id="@+id/imageView"
+                android:layout_width="match_parent"
+                android:layout_height="250dp"
+                android:layout_marginEnd="16dp"
+                android:background="#A8A4A4"
+                android:scaleType="centerCrop" />
+
             <TextView
                 android:id="@+id/tv_description"
                 android:layout_width="match_parent"
